2001-03-20  Andrew Cagney  <ac131313@redhat.com>

	* target.h (enum target_signal): Move definition from here.
	* defs.h (enum target_signal): To here.

	* config/arc/tm-arc.h (arc_software_single_step): Change type of
	first parameter to enum target_signal.
	* config/rs6000/tm-rs6000.h (rs6000_software_single_step): Ditto.
	* config/sparc/tm-sparc.h (sparc_software_single_step): Ditto.
	* rs6000-tdep.c (rs6000_software_single_step): Update.
	
2001-03-20  Andrew Cagney  <ac131313@redhat.com>

	* frame.h (SIZEOF_FRAME_SAVED_REGS): Report an error if macro
	already defined.
	
	From 2000-08-25 Stephane Carrez <Stephane.Carrez@worldnet.fr>:
        * stabsread.c (define_symbol): A parameter ('R'), a local ('r'),
        or a reference ('a') can be in a pseudo register.
        * infcmd.c (do_registers_info): Must take into account the pseudo
        registers to print their value.
        (registers_info): Likewise.
        * stack.c (frame_info): Likewise.
        * frame.h (SIZEOF_FRAME_SAVED_REGS): Save the pseudo registers.

2001-03-21  Eli Zaretskii  <eliz@is.elta.co.il>

	Unified support for hardware breakpoints and watchpoints on
	x86 targets:

	* config/i386/nm-i386.h: New file.

	* config/i386/nm-i386.h: (i386_cleanup_dregs)
	(i386_insert_watchpoint, i386_remove_watchpoint)
	(i386_region_ok_for_watchpoint, i386_stopped_by_hwbp)
	(i386_stopped_data_address, i386_insert_hw_breakpoint)
	(i386_remove_hw_breakpoint): Declare prototypes.
	[I386_USE_GENERIC_WATCHPOINTS] (TARGET_CAN_USE_HARDWARE_WATCHPOINT):
	Define if not already defined.
	(TARGET_REGION_OK_FOR_HW_WATCHPOINT, HAVE_CONTINUABLE_WATCHPOINT)
	(STOPPED_BY_WATCHPOINT, target_stopped_data_address)
	(target_insert_watchpoint, target_remove_watchpoint)
	(target_insert_hw_breakpoint, target_remove_hw_breakpoint): Define
	to call the appropriate i386_* functions.

	* i386-nat.c: New file.

	* i386-nat.c (I386_DR_CONTROL_MASK, I386_DR_LOCAL_ENABLE)
	(I386_DR_GLOBAL_ENABLE, I386_DR_DISABLE, I386_DR_SET_RW_LEN)