@@ -1,3 +1,7 @@
+2001-03-21  Andrew Cagney  <ac131313@redhat.com>
+
+	* gdbarch.sh: Avoid use of ``!''.
+
 2001-03-20  Andrew Cagney  <ac131313@redhat.com>
 
 	* target.h (enum target_signal): Move definition from here.
